fix team names wrapping

--- a/bracketapp/static/css/bracket.css
+++ b/bracketapp/static/css/bracket.css
@@ -13,7 +13,7 @@ nb-edit-correct-matchup {
 
 .nb-team {
   width: 100%;
-  min-width: 8.5rem;
+  min-width: 9rem;
   height: 28px;
 
   display: inline-flex;
